# c25519

./: .gitignore  CMakeLists.txt  README.md
src/: edsign.c  sha512.c  sha512.h
tests/: test_sha512.c
